--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="btn-bg"></div>
               </div>
             </div>
-            <h3 class="toggle-label text-center">Main switch</h3>
+            <!-- <h3 class="toggle-label text-center">Main switch</h3> -->
           </div>
           <div class="flex column gap-2 grow-1">
             <div id="errors-area" class="flex column gap-2">
@@ -70,9 +70,12 @@
             </div>
           </div>
         </div>
-        <div>
-          <h2>Settings</h2>
-          <div class="settings flex gap-3 wrap">
+        <div id="settings">
+          <div class="flex gap-2 align-center">
+            <h2>Settings</h2>
+            <button>open</button>
+          </div>
+          <div class="settings-container flex gap-3 wrap hidden">
             <div class="settings-item">
               <h3>Reaction time</h3>
               <div class="flex gap-2">
