--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
         <div class="flex wrap gap-4 mt-4">
           <div class="toggle grow-1">
             <div class="btn mt-2">
-              <input id="main-switch" type="checkbox" class="btn-checkbox" data-inited="false" />
+              <input
+                id="main-switch"
+                type="checkbox"
+                class="btn-checkbox"
+                data-inited="false"
+              />
               <div class="btn-track">
                 <div class="btn-knob"></div>
                 <div class="btn-bg"></div>
@@ -124,12 +129,7 @@
                 </label>
                 <label class="volts text-nowrap">
                   <span>Threshold</span>
-                  <input
-                    type="number"
-                    min="110"
-                    max="300"
-                    step="1"
-                  />
+                  <input type="number" min="110" max="300" step="1" />
                 </label>
               </div>
             </div>
@@ -146,12 +146,7 @@
                 </label>
                 <label class="volts text-nowrap">
                   <span>Threshold</span>
-                  <input
-                    type="number"
-                    min="85"
-                    max="220"
-                    step="1"
-                  />
+                  <input type="number" min="85" max="220" step="1" />
                 </label>
               </div>
             </div>
@@ -168,12 +163,7 @@
                 </label>
                 <label class="amps text-nowrap">
                   <span>Threshold</span>
-                  <input
-                    type="number"
-                    min="1"
-                    max="63"
-                    step="1"
-                  />
+                  <input type="number" min="1" max="63" step="1" />
                 </label>
               </div>
             </div>
@@ -190,13 +180,7 @@
                 </label>
                 <label class="mA text-nowrap">
                   <span>Threshold</span>
-                  <input
-                    type="number"
-                    min="10"
-                    max="99"
-                    step="1"
-                    value="10"
-                  />
+                  <input type="number" min="10" max="99" step="1" value="10" />
                 </label>
               </div>
             </div>
@@ -214,6 +198,7 @@
                 <button>Clear energy meter</button>
               </div>
             </div>
+          </div>
         </div>
       </div>
     </div>
